:art: Small command refinements.